[Fix bug count = 0]

--- a/MVC/Web.config
+++ b/MVC/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <customErrors mode="On" defaultRedirect="~/Error">
+    <customErrors mode="Off" defaultRedirect="~/Error">
     </customErrors>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
@@ -74,7 +74,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DatabaseDetailsContext" providerName="System.Data.SqlClient" connectionString="data source=(local);initial catalog=DatabaseWebOpxin;persist security info=True;user id=client;password=clientcaro;" />
+    <add name="DatabaseDetailsContext" providerName="System.Data.SqlClient" connectionString="workstation id=Nhom2TMDT.mssql.somee.com;packet size=4096;user id=TMDT_SQL;pwd=12345678;data source=Nhom2TMDT.mssql.somee.com;persist security info=False;initial catalog=Nhom2TMDT" />
   </connectionStrings>
   <entityFramework>
     <providers>
