--- a/MVC/MVC.csproj
+++ b/MVC/MVC.csproj
@@ -523,6 +523,7 @@
     <Content Include="Views\Profile\ChangePassword.cshtml" />
     <Content Include="Views\Design\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
+    <Content Include="Views\Register\Confirm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -530,7 +531,6 @@
     <Folder Include="Views\Error\" />
     <Folder Include="Views\ForgetPass\" />
     <Folder Include="Views\Login\" />
-    <Folder Include="Views\Register\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
