--- a/MVC/Web.config
+++ b/MVC/Web.config
@@ -74,7 +74,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DatabaseDetailsContext" providerName="System.Data.SqlClient" connectionString="workstation id=Nhom2TMDT.mssql.somee.com;packet size=4096;user id=TMDT_SQL;pwd=12345678;data source=Nhom2TMDT.mssql.somee.com;persist security info=False;initial catalog=Nhom2TMDT" />
+    <add name="DatabaseDetailsContext" providerName="System.Data.SqlClient" connectionString="data source=(localdb)\MSSQLLocalDB;persist security info=true;initial catalog=Nhom2TMDT" />
   </connectionStrings>
   <entityFramework>
     <providers>
