--- a/backend/Nhom2.TMDT.WebApi/appsettings.Development.json
+++ b/backend/Nhom2.TMDT.WebApi/appsettings.Development.json
@@ -7,6 +7,10 @@
     }
   },
   "AllowOrigins": {
-    "Allow":  "http://localhost:4200"
+    "Allow": "http://localhost:4200"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source=.;initial catalog=TMDT;integrated security=True;MultipleActiveResultSets=True"
   }
 }
+//"workstation id=Nhom2Ecommerce.mssql.somee.com;packet size=4096;user id=AdminEcommerce;pwd=12345678;data source=Nhom2Ecommerce.mssql.somee.com;persist security info=False;initial catalog=Nhom2Ecommerce"
