add controller, service web

--- a/backend/Nhom2.TMDT.Common/Nhom2.TMDT.Common.csproj
+++ b/backend/Nhom2.TMDT.Common/Nhom2.TMDT.Common.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Nhom2.TMDT.Data\Nhom2.TMDT.Data.csproj" />
+  </ItemGroup>
+
 </Project>
