--- a/backend/Nhom2.TMDT.WebApi/appsettings.Development.json
+++ b/backend/Nhom2.TMDT.WebApi/appsettings.Development.json
@@ -10,7 +10,6 @@
     "Allow": "http://localhost:4200"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=.;initial catalog=TMDT;integrated security=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "workstation id=Nhom2Ecommerce.mssql.somee.com;packet size=4096;user id=TMDT_SQL;pwd=12345678;data source=Nhom2Ecommerce.mssql.somee.com;persist security info=False;initial catalog=Nhom2Ecommerce"
   }
 }
-//"workstation id=Nhom2Ecommerce.mssql.somee.com;packet size=4096;user id=AdminEcommerce;pwd=12345678;data source=Nhom2Ecommerce.mssql.somee.com;persist security info=False;initial catalog=Nhom2Ecommerce"
