--- a/backend/Nhom2.TMDT.WebApi/Nhom2.TMDT.WebApi.csproj
+++ b/backend/Nhom2.TMDT.WebApi/Nhom2.TMDT.WebApi.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Nhom2.TMDT.Common\Nhom2.TMDT.Common.csproj" />
     <ProjectReference Include="..\Nhom2.TMDT.Data\Nhom2.TMDT.Data.csproj" />
+    <ProjectReference Include="..\Nhom2.TMDT.Service\Nhom2.TMDT.Service.csproj" />
   </ItemGroup>
 
 
