--- a/backend/Nhom2.TMDT.Service/Nhom2.TMDT.Service.csproj
+++ b/backend/Nhom2.TMDT.Service/Nhom2.TMDT.Service.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Admin\Command\" />
+    <Folder Include="Admin\ViewModels\" />
     <Folder Include="Home\Commands\" />
     <Folder Include="Account\Commands\" />
     <Folder Include="Order\Command\" />
