--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.9",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "ngx-pagination": "^5.0.0",
     "ngx-simple-modal": "^1.4.13",
     "ngx-toastr": "^12.1.0",
     "popper.js": "^1.16.1",
