fix create order

--- a/backend/Nhom2.TMDT.WebApi/appsettings.Development.json
+++ b/backend/Nhom2.TMDT.WebApi/appsettings.Development.json
@@ -13,3 +13,4 @@
     "DefaultConnection": "workstation id=Nhom2Ecommerce.mssql.somee.com;packet size=4096;user id=TMDT_SQL;pwd=12345678;data source=Nhom2Ecommerce.mssql.somee.com;persist security info=False;initial catalog=Nhom2Ecommerce"
   }
 }
+ //"Data source=.;initial catalog=GradingProgram;integrated security=True;MultipleActiveResultSets=True" 
